--- a/parallax.html
+++ b/parallax.html
@@ -17,7 +17,7 @@
         <h1 class="text">Teassaas</h1>
     </div>
     <div class="background2">
-        <h1 class="text">DEEZ NUTZ</h1>
+        <h1 class="text">DEEZ NUTZs</h1>
     </div>
 </body>
 
