--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="../pakornds.github.io/dist/style.css">
-    <style type="text/tailwindcss">
-        @layer utilities {
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="../pakornds.github.io/src/style.css">
+  <link rel="stylesheet" href="../pakornds.github.io//src/aos/aos.css">
+  <script src="../pakornds.github.io/src/aos/aos.js"></script>
+  <style type="text/tailwindcss">
+    @layer utilities {
       .content-auto {
         content-visibility: auto;
       }
@@ -18,7 +19,7 @@
 </head>
 
 <body>
-
+  <h1>dog</h1>
 </body>
 
 </html>
