It's work now guys!

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="../pakornds.github.io/src/style.css">
+  <title>Welcome!</title>
+  <link rel="stylesheet" href="./public/css/tailwind.css">
   <link rel="stylesheet" href="../pakornds.github.io//src/aos/aos.css">
   <script src="../pakornds.github.io/src/aos/aos.js"></script>
   <style type="text/tailwindcss">
@@ -19,7 +19,9 @@
 </head>
 
 <body>
-  <h1>dog</h1>
+  <h1 class="text-3xl font-bold underline">
+    Hello world!
+  </h1>
 </body>
 
 </html>
