dasd Co-authored-by: Lilyrua <Lilyrua@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -44,6 +44,49 @@
       </div>
     </section>
 
+    <div class="bg">
+      <div class="menu">
+        <div class="header">
+          <span> MENU UI RESUME </span>
+          <div class="close-button">✕</div>
+        </div>
+        <div class="content">
+          <div class="category"></div>
+          <div class="info">
+            <div class="list">
+              <div class="list-grid"></div>
+            </div>
+            <div class="craft-info">
+              <span class="craft-name">Loading</span>
+              <div class="craft-require-list"></div>
+            </div>
+            <div class="craft-info-bottom">
+              <div
+                id="craft-amount"
+                style="
+                  position: absolute;
+                  padding-bottom: 3%;
+                  padding-left: 2%;
+                  top: 50%;
+                  transform: translateY(-50%);
+                "
+              >
+                <div class="craft-button-minus"><span>-</span></div>
+                <input type="text" class="craft-info-number" value="1" />
+                <div class="craft-button-plus"><span>+</span></div>
+              </div>
+
+              <div class="craft-info-cost">
+                <div class="craft-cost"><span id="craft-cost"></span></div>
+              </div>
+
+              <span class="craft-submit">CRAFT</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <canvas class="background"></canvas>
     <script src="public/vendor/aos/aos.js"></script>
     <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
