--- a/resume1.html
+++ b/resume1.html
@@ -125,52 +125,65 @@
     </nav>
 
     <section id="home" class="flex flex-col justify-center">
-      <div class="container" data-aos="zoom-in" data-aos-delay="100">
-        <h1>Resume 1</h1>
-        <p>
+      <div class="area">
+        <ul class="circles">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+      <div
+        class="container flex flex-col items-center justify-center"
+        data-aos="zoom-in"
+        data-aos-delay="100"
+      >
+        <h1 class="font-sans text-6xl font-bold text-sky-800">Resume 1</h1>
+        <p class="my-3 text-3xl font-semibold text-sky-700">
           Name:
           <span class="typed" data-typed-items="Pakorn Tantiwutthiphat"></span>
         </p>
 
         <div>
           <img
-            style="border-radius: 15px"
+            style="border-radius: 50%"
             class="img-fluid"
             src="https://i.kfs.io/album/global/160289973,0v1/fit/500x500.jpg"
             alt="Bing Chiling"
           />
         </div>
-        <div class="social-links">
+        <div class="social-links mt-4">
           <a
             href="https://www.facebook.com/prite.pakorn"
             class="facebook"
             target="_blank"
-            ><i class="bx bxl-facebook text-4xl"></i
+            ><i class="bx bxl-facebook text-5xl text-sky-700"></i
           ></a>
           <a
             href="https://www.instagram.com/prite_.to/"
             class="instagram"
             target="_blank"
-            ><i class="bx bxl-instagram text-4xl"></i
+            ><i class="bx bxl-instagram text-5xl text-sky-700"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/pakorn-tantiwutthiphat-66a6b7246/"
             class="linkedin"
             target="_blank"
-            ><i class="bx bxl-linkedin text-4xl"></i
+            ><i class="bx bxl-linkedin text-5xl text-sky-700"></i
           ></a>
           <a
             href="https://www.youtube.com/watch?v=OoQLoKHhohg"
             class="discord"
             target="_blank"
-            ><i class="bx bxl-discord text-4xl"></i
+            ><i class="bx bxl-discord text-5xl text-sky-700"></i
           ></a>
         </div>
-      </div>
-      <div class="box">
-        <div class="wave -one"></div>
-        <div class="wave -two"></div>
-        <div class="wave -three"></div>
       </div>
     </section>
 
@@ -483,7 +496,7 @@
     <footer id="footer">
       <div class="container">
         <h3>Pakorn Tantiwutthiphat</h3>
-        <p>We do be gamin</p>
+        <p>Life is like a box of chocolate</p>
         <div class="social-links">
           <a
             href="https://www.facebook.com/prite.pakorn"
