--- a/index.html
+++ b/index.html
@@ -23,10 +23,18 @@
     />
     <link href="public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <link href="public/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="tailwind.css" />
+    <link rel="stylesheet" href="./public/css/tailwind.css" />
+    <link rel="stylesheet" href="./public/css/background.css">
+    
+    
   </head>
 
   <body>
+    <div id="layout" class="stars">
+      <h1>SHOOTING STARS...</h1>
+      <div id="ShootingStarParams"></div>
+    </div>
+
     <section
       id="menu"
       class="flex flex-auto flex-row items-center justify-center"
@@ -44,50 +52,6 @@
       </div>
     </section>
 
-    <div class="bg">
-      <div class="menu">
-        <div class="header">
-          <span> MENU UI RESUME </span>
-          <div class="close-button">✕</div>
-        </div>
-        <div class="content">
-          <div class="category"></div>
-          <div class="info">
-            <div class="list">
-              <div class="list-grid"></div>
-            </div>
-            <div class="craft-info">
-              <span class="craft-name">Loading</span>
-              <div class="craft-require-list"></div>
-            </div>
-            <div class="craft-info-bottom">
-              <div
-                id="craft-amount"
-                style="
-                  position: absolute;
-                  padding-bottom: 3%;
-                  padding-left: 2%;
-                  top: 50%;
-                  transform: translateY(-50%);
-                "
-              >
-                <div class="craft-button-minus"><span>-</span></div>
-                <input type="text" class="craft-info-number" value="1" />
-                <div class="craft-button-plus"><span>+</span></div>
-              </div>
-
-              <div class="craft-info-cost">
-                <div class="craft-cost"><span id="craft-cost"></span></div>
-              </div>
-
-              <span class="craft-submit">CRAFT</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <canvas class="background"></canvas>
     <script src="public/vendor/aos/aos.js"></script>
     <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="public/vendor/glightbox/js/glightbox.min.js"></script>
@@ -95,5 +59,7 @@
     <script src="public/vendor/typed.js/typed.min.js"></script>
     <script src="public/js/main.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./public/js/background.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.js></script>
   </body>
 </html>
