--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
     <link href="public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <link href="public/css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="./public/css/tailwind.css" />
-    <link rel="stylesheet" href="./public/css/background.css">
-    
-    
+    <link rel="stylesheet" href="./public/css/background.css" />
+    <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
+    <script src="public/vendor/aos/aos.js"></script>
+    <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="public/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="public/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="public/vendor/typed.js/typed.min.js"></script>
+    <script src="public/js/main.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./public/js/background.js"></script>
   </head>
 
   <body>
@@ -44,22 +51,12 @@
         data-aos="zoom-in"
         data-aos-delay="1"
       >
-        <h1 class="text-6xl font-extrabold text-black">Rush 42BKK</h1>
+        <h1 class="text-6xl font-extrabold text-white">Rush 42BKK</h1>
         <p class="text-3xl text-white">
           Member:
           <span class="typed" data-typed-items="patantiw, tsuksamr"></span>
         </p>
       </div>
     </section>
-
-    <script src="public/vendor/aos/aos.js"></script>
-    <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="public/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="public/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="public/vendor/typed.js/typed.min.js"></script>
-    <script src="public/js/main.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./public/js/background.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.1.js></script>
   </body>
 </html>
