--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
   </head>
 
   <body>
-    <div id="layout" class="stars">
-      <h1>SHOOTING STARS...</h1>
-      <div id="ShootingStarParams"></div>
-    </div>
+    <div id="layout" class="stars"></div>
 
     <section
       id="menu"
