--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
   </head>
 
   <body>
-    <div id="layout" class="stars"></div>
+    <div
+      id="layout"
+      class="stars"
+      data-aos="zoom-in-down"
+      data-aos-delay="1"
+    ></div>
 
     <section
       id="menu"
