--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
         data-aos="zoom-in"
         data-aos-delay="1"
       >
-        <h1 class="text-6xl font-extrabold text-white">Rush 42BKK</h1>
-        <p class="text-3xl text-white">
+        <h1 class="flex justify-center text-6xl font-extrabold text-white">
+          Rush 42BKK
+        </h1>
+        <p class="flex justify-center text-3xl text-white">
           Member:
           <span class="typed" data-typed-items="patantiw, tsuksamr"></span>
         </p>
