--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   </head>
 
   <body>
-    <div
-      id="layout"
-      class="stars"
-      data-aos="zoom-in-down"
-      data-aos-delay="1"
-    ></div>
+    <body>
+      <div class="galaxy">
+        <div class="sky"></div>
+        <span class="moon"></span>
+      </div>
+    </body>
 
     <section
       id="menu"
