--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   </head>
 
   <body>
-    <body>
+    <div data-aos="fade-up" data-aos-delay="1">
       <div class="galaxy">
         <div class="sky"></div>
         <span class="moon"></span>
       </div>
-    </body>
+    </div>
 
     <section
       id="menu"
