--- a/resume1.html
+++ b/resume1.html
@@ -125,20 +125,7 @@
     </nav>
 
     <section id="home" class="flex flex-col justify-center">
-      <div class="area">
-        <ul class="circles">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
+      <div id="layout" class="stars"></div>
       <div
         class="container flex flex-col items-center justify-center"
         data-aos="zoom-in"
@@ -188,7 +175,7 @@
     </section>
 
     <main id="main">
-      <section id="about" class="about">
+      <section id="about" class="about mt-6">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>About</h2>
@@ -555,5 +542,6 @@
     <script src="public/js/main.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
+    <script src="./public/js/resume1.js"></script>
   </body>
 </html>
