--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     />
     <link href="public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <link href="public/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./public/css/tailwind.css" />
     <link rel="stylesheet" href="./public/css/background.css" />
     <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
     <link rel="stylesheet" href="./public/css/menu.css">
@@ -68,7 +67,7 @@
   
         <div class="content">
            <div class="category">
-            <button class="Resume1" href="resume1.html">Resume1</a></button>
+            <a href="resume1.html">Resume1</a>
            </div>
            <div class="category2">
             <button class="Resume2" >Resume1</button>
