--- a/resume1.html
+++ b/resume1.html
@@ -39,6 +39,7 @@
     <nav
       id="navbar"
       class="sticky top-0 z-10 rounded bg-sky-900 px-2 py-2 dark:bg-gray-900 sm:px-4"
+      data-aos="fade-down"
     >
       <div
         class="container mx-auto flex flex-wrap items-center justify-between"
@@ -129,8 +130,8 @@
       <div id="layout" class="stars"></div>
       <div
         class="container flex flex-col items-center justify-center"
-        data-aos="zoom-in"
-        data-aos-delay="100"
+        data-aos="flip-left"
+        data-aos-delay="200"
       >
         <h1 class="font-sans text-6xl font-bold text-sky-800">Resume 1</h1>
         <p class="my-3 text-3xl font-semibold text-sky-700">
@@ -149,25 +150,25 @@
         <div class="social-links mt-4">
           <a
             href="https://www.facebook.com/prite.pakorn"
-            class="facebook"
+            class="facebook m-2"
             target="_blank"
             ><i class="bx bxl-facebook text-5xl text-sky-700"></i
           ></a>
           <a
             href="https://www.instagram.com/prite_.to/"
-            class="instagram"
+            class="instagram m-2"
             target="_blank"
             ><i class="bx bxl-instagram text-5xl text-sky-700"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/pakorn-tantiwutthiphat-66a6b7246/"
-            class="linkedin"
+            class="linkedin m-2"
             target="_blank"
             ><i class="bx bxl-linkedin text-5xl text-sky-700"></i
           ></a>
           <a
             href="https://www.youtube.com/watch?v=OoQLoKHhohg"
-            class="discord"
+            class="discord m-2"
             target="_blank"
             ><i class="bx bxl-discord text-5xl text-sky-700"></i
           ></a>
@@ -180,7 +181,7 @@
         <div class="container divide-y" data-aos="fade-up">
           <div class="section-title">
             <h2>About</h2>
-            <p>
+            <p class="text-lg">
               Hello, my name is Pakorn Tantiwutthiphat, and I hope that this
               resume accurately represents my skills and career.
             </p>
@@ -192,27 +193,27 @@
             >
               <img
                 style="border-radius: 100px"
-                src="public/img/profile-img.jpg"
+                src="public/img/6wjbxq.jpg"
               />
             </div>
-            <div class="mt-2 pt-4 lg:col-span-4 lg:col-end-7 lg:pt-0">
-              <h2 class="text-bold">High School Student</h2>
+            <div class="mt-4 pt-4 lg:col-span-4 lg:col-end-7 lg:pt-0">
+              <h2 class="text-bold text-2xl">High School Student</h2>
               <p class="text-bold mb-4 italic">
                 This is my senior year of high school, and I'm hoping to get
                 into my dream university.
               </p>
-              <div class="flex flex-col lg:flex-row">
+              <div class="flex flex-col text-xl lg:flex-row lg:pl-4">
                 <div class="lg:col-span-6">
                   <ul>
-                    <li class="mb-2 lg:mb-4">
+                    <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i>
                       <strong>Birthday:</strong> <span>XX XXX 2005</span>
                     </li>
-                    <li class="mb-2 lg:mb-4">
+                    <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i>
                       <strong>Phone:</strong> <span>064 xxx xxxx</span>
                     </li>
-                    <li class="mb-2 lg:mb-4">
+                    <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i> <strong>City:</strong>
                       <span>Samutprakarn, Thailand</span>
                     </li>
@@ -220,11 +221,11 @@
                 </div>
                 <div class="lg:col-span-6 lg:ml-12">
                   <ul>
-                    <li class="mb-2 lg:mb-4">
+                    <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
                       <span>17</span>
                     </li>
-                    <li class="mb-2 lg:mb-4">
+                    <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i>
                       <strong>Email:</strong>
                       <span>pakorn.tantiwutthiphat@gmail.com</span>
@@ -238,16 +239,16 @@
       </section>
 
       <section id="resume" class="resume">
-        <div class="container" data-aos="fade-up">
+        <div class="container divide-y" data-aos="fade-left">
           <div class="section-title">
             <h2>Resume</h2>
-            <p>
+            <p class="text-lg">
               This will show what I have done and what my experience looks like.
             </p>
           </div>
 
-          <div class="row">
-            <div class="col-lg-6">
+          <div class="lg:grid lg:grid-cols-2 lg:flex-row">
+            <div class="lg:col-span-1">
               <h3 class="resume-title">Summary</h3>
               <div class="resume-item pb-0">
                 <h4>Pakorn Tantiwutthiphat</h4>
@@ -282,9 +283,9 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="lg:col-span-1">
               <h3 class="resume-title">Professional Experience</h3>
-              <div class="resume-item">
+              <div class="resume-item lg:ml-2">
                 <h4>CSCamp 13</h4>
                 <h5>2021</h5>
                 <p><em>Online Learning</em></p>
@@ -301,7 +302,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="resume-item">
+              <div class="resume-item lg:ml-2">
                 <h4>ITCAMP 18</h4>
                 <h5>2022</h5>
                 <p><em>Onsite Learning and Activities</em></p>
@@ -322,21 +323,23 @@
           </div>
         </div>
         <section id="skills" class="skills section-bg">
-          <div class="container" data-aos="fade-up">
+          <div class="container divide-y" data-aos="fade-right">
             <div class="section-title">
               <h2>Skills</h2>
-              <p>This will give a rough idea of my skill level.</p>
+              <p class="text-lg ">This will give a rough idea of my skill level.</p>
             </div>
 
-            <div class="row skills-content">
-              <div class="col-lg-6">
+            <div
+              class="skills-content pt-4 flex flex-col lg:grid lg:grid-cols-2 lg:flex-row"
+            >
+              <div class="lg:col-span-1 lg:mr-2">
                 <div class="progress">
-                  <span class="skill">HTML <i class="val">85%</i></span>
+                  <span class="skill">HTML <i class="val">65%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="85"
+                      aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -344,12 +347,12 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">CSS <i class="val">75%</i></span>
+                  <span class="skill">CSS <i class="val">50%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="75"
+                      aria-valuenow="50"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -357,12 +360,24 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">JavaScript <i class="val">69%</i></span>
+                  <span class="skill">JavaScript <i class="val">60%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="69"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    ></div>
+                  </div>
+                </div>
+                <div class="progress">
+                  <span class="skill">Python <i class="val">50%</i></span>
+                  <div class="progress-bar-wrap">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="50"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -370,14 +385,14 @@
                 </div>
               </div>
 
-              <div class="col-lg-6">
+              <div class="lg:col-span-1 lg:ml-2">
                 <div class="progress">
-                  <span class="skill">C <i class="val">40%</i></span>
+                  <span class="skill">C <i class="val">30%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="40"
+                      aria-valuenow="30"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -385,12 +400,12 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">Vue <i class="val">70%</i></span>
+                  <span class="skill">Vue <i class="val">60%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="70"
+                      aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -398,12 +413,12 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">Firebase <i class="val">65%</i></span>
+                  <span class="skill">Firebase <i class="val">55%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="65"
+                      aria-valuenow="55"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -415,13 +430,12 @@
         </section>
       </section>
       <section id="contact" class="contact">
-        <div class="container" data-aos="fade-up">
+        <div class="container" data-aos="fade-down">
           <div class="section-title">
             <h2>Contact</h2>
           </div>
-
-          <div class="row mt-1">
-            <div class="col-lg-4">
+          <div class="mt-2 lg:grid lg:grid-cols-3 lg:flex-row">
+            <div class="lg:col-span-1">
               <div class="info">
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
@@ -442,40 +456,40 @@
                 </div>
               </div>
             </div>
-
-            <div class="col-lg-8 mt-lg-0 mt-5">
-              <form action="https://formspree.io/f/xrgjnday" method="POST">
-                <input
-                  type="email"
-                  name="email"
-                  class="form-control"
-                  placeholder="Email"
-                />
-                <div class="mt-3">
+              <div class="mt-4 lg:col-span-2 lg:mt-0">
+                <form action="https://formspree.io/f/xrgjnday" method="POST">
                   <input
+                    type="email"
+                    name="email"
                     class="form-control"
-                    type="subject"
-                    name="subject"
-                    placeholder="Subject"
+                    placeholder="Email"
                   />
-                </div>
-                <div class="form-group mt-3">
-                  <textarea
-                    class="form-control"
-                    name="message"
-                    rows="5"
-                    placeholder="Message"
-                    required
-                  ></textarea>
-                </div>
-                <div class="rounded-md shadow">
-                  <a
-                    href="#"
-                    class="mt-2 flex w-full items-center justify-center rounded-md border border-transparent bg-sky-700 px-8 py-3 text-base font-medium text-white hover:bg-sky-900 md:py-4 md:px-10 md:text-lg"
-                    >Send message</a
-                  >
-                </div>
-              </form>
+                  <div class="mt-3">
+                    <input
+                      class="form-control"
+                      type="subject"
+                      name="subject"
+                      placeholder="Subject"
+                    />
+                  </div>
+                  <div class="form-group mt-3">
+                    <textarea
+                      class="form-control"
+                      name="message"
+                      rows="5"
+                      placeholder="Message"
+                      required
+                    ></textarea>
+                  </div>
+                  <div class="rounded-md shadow">
+                    <a
+                      href="#"
+                      class="mt-2 flex w-full items-center justify-center rounded-md border border-transparent bg-sky-700 px-8 py-3 text-base font-medium text-white hover:bg-sky-900 md:py-4 md:px-10 md:text-lg"
+                      >Send message</a
+                    >
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
@@ -484,7 +498,11 @@
     <footer id="footer">
       <div class="container">
         <h3>Pakorn Tantiwutthiphat</h3>
-        <p>Life is like a box of chocolate</p>
+        <p>
+          "The problem with coding CSS isn't only the skill issue, but it is
+          also the destiny that will decide your future." - Sun Tzu the art of
+          coding, 2022
+        </p>
         <div class="social-links">
           <a
             href="https://www.facebook.com/prite.pakorn"
