--- a/resume1.html
+++ b/resume1.html
@@ -127,7 +127,7 @@
     </nav>
 
     <section id="home" class="flex flex-col justify-center">
-      <div id="layout" class="stars"></div>
+      <div id="layout" class="stars -z-10"></div>
       <div
         class="container flex flex-col items-center justify-center"
         data-aos="flip-left"
@@ -142,9 +142,9 @@
         <div>
           <img
             style="border-radius: 50%"
-            class="img-fluid"
-            src="https://i.kfs.io/album/global/160289973,0v1/fit/500x500.jpg"
-            alt="Bing Chiling"
+            class="img-fluid h-96"
+            src="https://external-preview.redd.it/APNpZ0d65zQ88K2JOezle7upeGjLcj0rHy_vIXcTtaA.jpg?width=640&crop=smart&auto=webp&s=9f7faacfd7ec153e490fedc500f57f47186c6cab"
+            alt="This incident will be reported"
           />
         </div>
         <div class="social-links mt-4">
@@ -177,10 +177,10 @@
     </section>
 
     <main id="main">
-      <section id="about" class="mt-4">
+      <section id="about" class="mt-4 xl:pt-24">
         <div class="container divide-y" data-aos="fade-up">
           <div class="section-title">
-            <h2>About</h2>
+            <h2 class="mt-4 pt-4">About</h2>
             <p class="text-lg">
               Hello, my name is Pakorn Tantiwutthiphat, and I hope that this
               resume accurately represents my skills and career.
@@ -189,11 +189,11 @@
 
           <div class="flex flex-col lg:flex-row">
             <div
-              class="mt-4 lg:col-start-1 lg:col-end-3 lg:mr-10 lg:mt-4 lg:w-2/6"
+              class="mt-4 lg:col-start-1 lg:col-end-3 lg:mr-10 lg:mt-4 lg:w-2/6 lg:pt-12 xl:pt-0"
             >
               <img
-                style="border-radius: 100px"
-                src="public/img/6wjbxq.jpg"
+                src="public/img/6x10jc.jpg"
+                alt="Tliangso terrorized people"
               />
             </div>
             <div class="mt-4 pt-4 lg:col-span-4 lg:col-end-7 lg:pt-0">
