--- a/index.html
+++ b/index.html
@@ -78,12 +78,11 @@
         </div>
         <div class="list">
           <div class="list-grid">
-            <a href="resume2.html">JAVA1</a>
-            <a href="resume2.html">JAVA2</a>
-            <a href="resume2.html">JAVA3</a>
-            <a href="resume2.html">JAVA4</a>
-            <a href="resume2.html">JAVA5</a>
-            <a href="resume2.html">JAVA6</a>
+            <a href="Grader.html">Grader</a>
+            <a href="calc.html">Calcurate</a>
+            <a href="balloon.html">Ballon</a>
+            <a href="backgroound.html">Background</a>
+            <a href="color.html">Color</a>
           </div>
         </div>
       </div>
