--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
         </div>
         <div class="list">
           <div class="list-grid">
-            <a href="Grader.html">Grader</a>
-            <a href="calc.html">Calcurate</a>
-            <a href="balloon.html">Ballon</a>
-            <a href="backgroound.html">Background</a>
-            <a href="color.html">Color</a>
+            <a href="./public/html/Grader.html">Grader</a>
+            <a href="./public/html/calc.html">Calcurate</a>
+            <a href="./public/html/balloon.html">Ballon</a>
+            <a href="./public/html/backgroound.html">Background</a>
+            <a href="./public/html/color.html">Color</a>
           </div>
         </div>
       </div>
