--- a/public/html/backgroound.html
+++ b/public/html/backgroound.html
@@ -11,11 +11,11 @@
   <body>
     <div class="navbar">
       <ul>
-        <a href="index.html"><li>Home</li></a>
-        <a href="Grader.html"><li>Grader</li></a>
-        <a href="calc.html"><li>Calcurate</li></a>
-        <a href="balloon.html"><li>Ballon</li></a>
-        <a href="color.html"><li>Color</li></a>
+        <a href="..index.html"><li>Home</li></a>
+        <a href="./Grader.html"><li>Grader</li></a>
+        <a href="./calc.html"><li>Calculator</li></a>
+        <a href="./balloon.html"><li>Balloon</li></a>
+        <a href="./color.html"><li>Color</li></a>
       </ul>
     </div>
     <button onclick="random_bg_color()">Click me!</button>
