--- a/public/html/balloon.html
+++ b/public/html/balloon.html
@@ -24,11 +24,11 @@
     <div class="navbar">
         <div class="navbar">
         <ul>
-            <a href="index.html"><li>Home</li></a>
-            <a href="Grader.html"><li>Grader</li></a>
-            <a href="calc.html"><li>Calcurate</li></a>
-            <a href="backgroound.html"><li>Background</li></a>
-            <a href="color.html"><li>Color</li></a>
+            <a href="..index.html"><li>Home</li></a>
+            <a href="./Grader.html"><li>Grader</li></a>
+            <a href="./calc.html"><li>Calculator</li></a>
+            <a href="./backgroound.html"><li>Background</li></a>
+            <a href="./color.html"><li>Color</li></a>
         </ul>
     </div>
 
