--- a/public/html/calc.html
+++ b/public/html/calc.html
@@ -10,11 +10,11 @@
   <body>
     <div class="navbar">
       <ul>
-        <a href="index.html"><li>Home</li></a>
-        <a href="Grader.html"><li>Grader</li></a>
-        <a href="balloon.html"><li>Ballon</li></a>
-        <a href="backgroound.html"><li>Background</li></a>
-        <a href="color.html"><li>Color</li></a>
+        <a href="..index.html"><li>Home</li></a>
+        <a href="./Grader.html"><li>Grader</li></a>
+        <a href="./balloon.html"><li>balloon</li></a>
+        <a href="./backgroound.html"><li>Background</li></a>
+        <a href="./color.html"><li>Color</li></a>
       </ul>
     </div>
 
