--- a/public/html/color.html
+++ b/public/html/color.html
@@ -25,11 +25,12 @@
   <body>
     <div class="navbar">
       <ul>
-        <a href="index.html"><li>Home</li></a>
-        <a href="Grader.html"><li>Grader</li></a>
-        <a href="calc.html"><li>Calcurate</li></a>
-        <a href="balloon.html"><li>Ballon</li></a>
-        <a href="backgroound.html"><li>Background</li></a>
+        <a href="..index.html"><li>Home</li></a>
+        <a href="./Grader.html"><li>Grader</li></a>
+        <a href="./calc.html"><li>Calculator</li></a>
+        <a href="./balloon.html"><li>balloon</li></a>
+        <a href="./backgroound.html"><li>Background</li></a>
+        
       </ul>
     </div>
     <div class="Desc">
