--- a/resume2.html
+++ b/resume2.html
@@ -149,13 +149,13 @@
         </div>
         <div class="social-links mt-4">
           <a
-            href="https://www.facebook.com/prite.pakorn"
+            href="https://www.facebook.com/Tus.suksamran"
             class="facebook m-2"
             target="_blank"
             ><i class="bx bxl-facebook text-5xl text-sky-700"></i
           ></a>
           <a
-            href="https://www.instagram.com/prite_.to/"
+            href="https://www.instagram.com/imilway.k/"
             class="instagram m-2"
             target="_blank"
             ><i class="bx bxl-instagram text-5xl text-sky-700"></i
@@ -182,7 +182,7 @@
           <div class="section-title">
             <h2 class="mt-4 pt-4">About</h2>
             <p class="text-lg">
-              Hello, my name is Pakorn Tantiwutthiphat, and I hope that this
+              Hello, my name is Tus Suksamran, and I hope that this
               resume accurately represents my skills and career.
             </p>
           </div>
@@ -211,11 +211,11 @@
                     </li>
                     <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Phone:</strong> <span>064 xxx xxxx</span>
+                      <strong>Phone:</strong> <span>091 xxx xxxx</span>
                     </li>
                     <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i> <strong>City:</strong>
-                      <span>Samutprakarn, Thailand</span>
+                      <span>Kanchanaburi, Thailand</span>
                     </li>
                   </ul>
                 </div>
@@ -228,7 +228,7 @@
                     <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i>
                       <strong>Email:</strong>
-                      <span>pakorn.tantiwutthiphat@gmail.com</span>
+                      <span>tusg082@gmail.com</span>
                     </li>
                   </ul>
                 </div>
@@ -251,7 +251,7 @@
             <div class="lg:col-span-1">
               <h3 class="resume-title">Summary</h3>
               <div class="resume-item pb-0">
-                <h4>Pakorn Tantiwutthiphat</h4>
+                <h4>Tus Suksamran</h4>
                 <p>
                   <em
                     >I am a 12th grade high school student who wants to design
@@ -259,9 +259,9 @@
                   >
                 </p>
                 <ul>
-                  <li>Samutprakarn, Thailand</li>
-                  <li>064 xxx xxxx</li>
-                  <li>pakorn.tantiwutthiphat@gmail.com</li>
+                  <li>Tus Suksamran</li>
+                  <li>091 xxx xxxx</li>
+                  <li>tusg082@gmail.com</li>
                 </ul>
               </div>
 
@@ -440,19 +440,19 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>XXX, Samutprakarn, Thailand 10270</p>
+                  <p>XXX, Kanchanaburi, Thailand 71000</p>
                 </div>
 
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>pakorn.tantiwutthiphat@gmail.com</p>
+                  <p>tusg082@gmail.com</p>
                 </div>
 
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>064 xxx xxxx</p>
+                  <p>091 xxx xxxx</p>
                 </div>
               </div>
             </div>
@@ -497,7 +497,7 @@
     </main>
     <footer id="footer">
       <div class="container">
-        <h3>Pakorn Tantiwutthiphat</h3>
+        <h3>Tus Suksamran</h3>
         <p>
           "The problem with coding CSS isn't only the skill issue, but it is
           also the destiny that will decide your future." - Sun Tzu the art of
@@ -505,13 +505,13 @@
         </p>
         <div class="social-links">
           <a
-            href="https://www.facebook.com/prite.pakorn"
+            href="https://www.facebook.com/Tus.suksamran"
             class="facebook"
             target="_blank"
             ><i class="bx bxl-facebook"></i
           ></a>
           <a
-            href="https://www.instagram.com/prite_.to/"
+            href="https://www.instagram.com/imilway.k/"
             class="instagram"
             target="_blank"
             ><i class="bx bxl-instagram"></i
