--- a/index.html
+++ b/index.html
@@ -70,39 +70,19 @@
 
         <div class="content">
           <div class="category">
-            <div class="mt-40 flex flex-col items-center justify-center">
-              <p>Resume 1</p>
-              <div class="mt-4 sm:mt-0 sm:ml-3">
-                <a
-                  href="resume1.html"
-                  class="flex w-full items-center justify-center rounded-md border border-transparent bg-sky-100 px-8 py-3 text-base font-medium text-gray-800 hover:bg-indigo-200 md:py-4 md:px-10 md:text-lg"
-                  >patantiw</a
-                >
-              </div>
-            </div>
+            <a href="resume1.html">Resume 1</a>
           </div>
           <div class="category2">
-            <div class="mt-40 flex flex-col items-center justify-center">
-              <p>Resume 2</p>
-              <div class="mt-4 sm:mt-0 sm:ml-3">
-                <a
-                  href="resume2.html"
-                  class="flex w-full items-center justify-center rounded-md border border-transparent bg-sky-100 px-8 py-3 text-base font-medium text-gray-800 hover:bg-indigo-200 md:py-4 md:px-10 md:text-lg"
-                  >tsuksamr</a
-                >
-              </div>
-            </div>
+            <a href="resume2.html">Resume 2</a>
           </div>
         </div>
         <div class="list">
           <div class="list-grid">
-            <a class="py-12" href="./public/html/Grader.html">Grader</a>
-            <a class="py-12" href="./public/html/calc.html">Calcurate</a>
-            <a class="py-12" href="./public/html/balloon.html">Ballon</a>
-            <a class="py-12" href="./public/html/backgroound.html"
-              >Background</a
-            >
-            <a class="py-12" href="./public/html/color.html">Color</a>
+            <a href="Grader.html">Grader</a>
+            <a href="calc.html">Calculator</a>
+            <a href="balloon.html">Ballon</a>
+            <a href="backgroound.html">Background</a>
+            <a href="color.html">Color</a>
           </div>
         </div>
       </div>
