--- a/public/html/Grader.html
+++ b/public/html/Grader.html
@@ -27,11 +27,11 @@
 
     <div class="navbar">
       <ul>
-        <a href="index.html"><li>Home</li></a>
-        <a href="calc.html"><li>Calcurate</li></a>
-        <a href="balloon.html"><li>Ballon</li></a>
-        <a href="backgroound.html"><li>Background</li></a>
-        <a href="color.html"><li>Color</li></a>
+        <a href="..index.html"><li>Home</li></a>
+        <a href="./calc.html"><li>Calculator</li></a>
+        <a href="./balloon.html"><li>Balloon</li></a>
+        <a href="./backgroound.html"><li>Background</li></a>
+        <a href="./color.html"><li>Color</li></a>
       </ul>
     </div>
 
