--- a/index.html
+++ b/index.html
@@ -1,99 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Welcome!</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
-    <link href="public/img/favicon.png" rel="icon" />
-    <link href="public/img/apple-touch-icon.png" rel="apple-touch-icon" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-      rel="stylesheet"
-    />
-    <link href="public/vendor/aos/aos.css" rel="stylesheet" />
-    <link
-      href="public/vendor/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="public/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
-    <link href="public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-    <link href="public/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./public/css/background.css" />
-    <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
-    <link rel="stylesheet" href="./public/css/menu.css" />
-  </head>
 
-  <body>
-    <div data-aos="fade-up" data-aos-delay="1">
-      <div class="galaxy">
-        <div class="sky"></div>
-        <span class="moon"></span>
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <title>Welcome!</title>
+  <meta content="" name="description" />
+  <meta content="" name="keywords" />
+  <link href="public/img/favicon.png" rel="icon" />
+  <link href="public/img/apple-touch-icon.png" rel="apple-touch-icon" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet" />
+  <link href="public/vendor/aos/aos.css" rel="stylesheet" />
+  <link href="public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="public/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
+  <link href="public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+  <link href="public/css/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./public/css/background.css" />
+  <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
+  <link rel="stylesheet" href="./public/css/menu.css" />
+</head>
+
+<body>
+  <div data-aos="fade-up" data-aos-delay="1">
+    <div class="galaxy">
+      <div class="sky"></div>
+      <span class="moon"></span>
+    </div>
+  </div>
+
+  <section id="menu" class="flex flex-row items-center justify-center">
+    <div class="mt-5 flex flex-col md:mt-2" data-aos="zoom-in" data-aos-delay="1">
+      <h1 class="flex justify-center text-6xl font-extrabold text-white">
+        Rush 42BKK
+      </h1>
+      <div class="mt-3">
+        <p class="flex justify-center text-3xl text-white">
+          Member:
+          <span class="typed" data-typed-items="patantiw, tsuksamr"></span>
+        </p>
+      </div>
+
+      <div class="mt-3 rounded-md shadow">
+        <a onclick="slide()"
+          class="flex w-full cursor-pointer items-center justify-center rounded-md border border-transparent bg-indigo-600 py-2 text-base font-medium text-white hover:bg-indigo-700 md:py-4 md:px-10 md:text-lg">Click
+          me!</a>
       </div>
     </div>
+  </section>
+  <div style="display: none" class="bg" id="slide">
+    <div class="menu">
+      <div class="header">
+        <span> MENU UI RESUME </span>
+        <div onclick="out()" class="close-button cursor-pointer">✕</div>
+      </div>
 
-    <section id="menu" class="flex flex-row items-center justify-center">
-      <div
-        class="mt-5 flex flex-col md:mt-2"
-        data-aos="zoom-in"
-        data-aos-delay="1"
-      >
-        <h1 class="flex justify-center text-6xl font-extrabold text-white">
-          Rush 42BKK
-        </h1>
-        <div class="mt-3">
-          <p class="flex justify-center text-3xl text-white">
-            Member:
-            <span class="typed" data-typed-items="patantiw, tsuksamr"></span>
-          </p>
+      <div class="content">
+        <div class="category">
+          <a href="resume1.html">Resume 1</a>
         </div>
-
-        <div class="mt-3 rounded-md shadow">
-          <a
-            onclick="slide()"
-            class="flex w-full cursor-pointer items-center justify-center rounded-md border border-transparent bg-indigo-600 py-2 text-base font-medium text-white hover:bg-indigo-700 md:py-4 md:px-10 md:text-lg"
-            >Click me!</a
-          >
+        <div class="category2">
+          <a href="resume2.html">Resume 2</a>
         </div>
       </div>
-    </section>
-    <div style="display: none" class="bg" id="slide">
-      <div class="menu">
-        <div class="header">
-          <span> MENU UI RESUME </span>
-          <div onclick="out()" class="close-button cursor-pointer">✕</div>
-        </div>
-
-        <div class="content">
-          <div class="category">
-            <a href="resume1.html">Resume 1</a>
-          </div>
-          <div class="category2">
-            <a href="resume2.html">Resume 2</a>
-          </div>
-        </div>
-        <div class="list">
-          <div class="list-grid">
-            <a href="Grader.html">Grader</a>
-            <a href="calc.html">Calculator</a>
-            <a href="balloon.html">Ballon</a>
-            <a href="backgroound.html">Background</a>
-            <a href="color.html">Color</a>
-          </div>
+      <div class="list">
+        <div class="list-grid">
+          <a href="Grader.html">Grader</a>
+          <a href="calc.html">Calculator</a>
+          <a href="balloon.html">Balloon</a>
+          <a href="backgroound.html">Background</a>
+          <a href="color.html">Color</a>
         </div>
       </div>
     </div>
-  </body>
-  <script src="public/vendor/aos/aos.js"></script>
-  <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="public/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="public/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="public/vendor/typed.js/typed.min.js"></script>
-  <script src="public/js/main.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="./public/js/background.js"></script>
+  </div>
+</body>
+<script src="public/vendor/aos/aos.js"></script>
+<script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="public/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="public/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="public/vendor/typed.js/typed.min.js"></script>
+<script src="public/js/main.js"></script>
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="./public/js/background.js"></script>
+
 </html>
