--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
       </div>
       <div class="list">
         <div class="list-grid">
-          <a class="py-12" href="./public/html/Grader.html">Grader</a>
-          <a class="py-12" href="./public/html/calc.html">Calculator</a>
-          <a class="py-12" href="./public/html/balloon.html">Balloon</a>
-          <a class="py-12" href="./public/html/backgroound.html">Background</a>
-          <a class="py-12" href="./public/html/color.html">Color</a>
+          <a class="mt-12" href="./public/html/Grader.html">Grader</a>
+          <a class="mt-12" href="./public/html/calc.html">Calculator</a>
+          <a class="mt-12" href="./public/html/balloon.html">Balloon</a>
+          <a class="mt-12" href="./public/html/backgroound.html">Background</a>
+          <a class="mt-12" href="./public/html/color.html">Color</a>
         </div>
       </div>
     </div>
