--- a/resume1.html
+++ b/resume1.html
@@ -355,7 +355,7 @@
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
               <div class="rounded-md shadow">
-                <a href="#"
+                <button type="submit"
                   class="mt-2 flex w-full items-center justify-center rounded-md border border-transparent bg-sky-700 px-8 py-3 text-base font-medium text-white hover:bg-sky-900 md:py-4 md:px-10 md:text-lg">Send
                   message</a>
               </div>
