--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     rel="stylesheet" />
   <link href="public/vendor/aos/aos.css" rel="stylesheet" />
   <link href="public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="public/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
   <link href="public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
   <link href="public/css/style.css" rel="stylesheet" />
   <link rel="stylesheet" href="./public/css/background.css" />
@@ -78,11 +77,11 @@
       </div>
       <div class="list">
         <div class="list-grid">
-          <a class="mt-12" href="./public/html/Grader.html">Grader</a>
-          <a class="mt-12" href="./public/html/calc.html">Calculator</a>
-          <a class="mt-12" href="./public/html/balloon.html">Balloon</a>
-          <a class="mt-12" href="./public/html/backgroound.html">Background</a>
-          <a class="mt-12" href="./public/html/color.html">Color</a>
+          <a class="mt-12" href="./Grader.html">Grader</a>
+          <a class="mt-12" href="./calc.html">Calculator</a>
+          <a class="mt-12" href="./balloon.html">Balloon</a>
+          <a class="mt-12" href="./backgroound.html">Background</a>
+          <a class="mt-12" href="./color.html">Color</a>
         </div>
       </div>
     </div>
@@ -90,7 +89,6 @@
 </body>
 <script src="public/vendor/aos/aos.js"></script>
 <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="public/vendor/glightbox/js/glightbox.min.js"></script>
 <script src="public/vendor/swiper/swiper-bundle.min.js"></script>
 <script src="public/vendor/typed.js/typed.min.js"></script>
 <script src="public/js/main.js"></script>
