--- a/balloon.html
+++ b/balloon.html
@@ -67,7 +67,8 @@
         <p id="test"></p>
     </div>
     <script>
-        varri = 200;
+        varri = 200; //define size
+        brute = ["red", "blue", "green"];
         function reduceSize() {
             if (varri > 200) {
                 varri -= 5;
