--- a/resume1.html
+++ b/resume1.html
@@ -22,7 +22,7 @@
   <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
 </head>
 
-<body>
+<body onload="popUp()">
   <nav id="navbar" class="sticky top-0 z-10 rounded bg-sky-900 px-2 py-2 dark:bg-gray-900 sm:px-4" data-aos="fade-down">
     <div class="container mx-auto flex flex-wrap items-center justify-between">
       <a href="index.html" class="flex items-center">
