--- a/balloon.html
+++ b/balloon.html
@@ -74,7 +74,7 @@
                 varri -= 5;
                 document.getElementById("Cir").style.height = varri + "px";
                 document.getElementById("Cir").style.width = varri + "px";
-                document.getElementById("Cir").style.backgroundColor = brute[varr % 3];
+                document.getElementById("Cir").style.backgroundColor = brute[varri % 3];
             }
             document.getElementById("test").innerHTML = varri;
         }
@@ -84,7 +84,7 @@
                 varri += 10;
                 document.getElementById("Cir").style.height = varri + "px";
                 document.getElementById("Cir").style.width = varri + "px";
-                document.getElementById("Cir").style.backgroundColor = brute[index % 3];
+                document.getElementById("Cir").style.backgroundColor = brute[varri % 3];
             }
             else {
                 varri = 200;
