--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="./public/css/menu.css" />
 </head>
 
-<body>
+<body onload="popup()">
   <div data-aos="fade-up" data-aos-delay="1">
     <div class="galaxy">
       <div class="sky"></div>
