--- a/grader.html
+++ b/grader.html
@@ -9,12 +9,16 @@
   <title>Grader</title>
   <link rel="stylesheet" href="./public/css/background.css" />
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
+  <link rel="stylesheet" href="./public/css/bgjava.css">
   <style>
     .content {
       width: fit-content;
       margin: 0 auto;
       margin-top: 50px;
       background-color: antiquewhite;
+    }
+    body{
+      color: black;
     }
   </style>
 </head>
@@ -70,7 +74,6 @@
       <input type="text" id="inp" />
 
       <button onclick="show()">CLICK ME</button>
-      <h5># โปรแกรมคิดเกรด</h5>
     </div>
   </section>
   <script src="./public/js/Grader.js"></script>
