--- a/resume2.html
+++ b/resume2.html
@@ -309,7 +309,7 @@
                         </div>
                     </div>
                     <div class="mt-4 lg:col-span-2 lg:mt-0">
-                        <form action="https://formspree.io/f/xrgjnday" method="POST">
+                        <form action="https://formspree.io/f/mdojdqob" method="POST">
                             <input type="email" name="email" class="form-control" placeholder="Email" />
                             <div class="mt-3">
                                 <input class="form-control" type="subject" name="subject" placeholder="Subject" />
