--- a/resume1.html
+++ b/resume1.html
@@ -137,8 +137,7 @@
 
         <div>
           <img
-            style="border-radius: 50%"
-            class="img-fluid h-96"
+            class="img-fluid h-96 rounded-lg"
             src="https://external-preview.redd.it/APNpZ0d65zQ88K2JOezle7upeGjLcj0rHy_vIXcTtaA.jpg?width=640&crop=smart&auto=webp&s=9f7faacfd7ec153e490fedc500f57f47186c6cab"
             alt="This incident will be reported"
           />
@@ -203,6 +202,7 @@
               class="mt-4 lg:col-start-1 lg:col-end-3 lg:mr-10 lg:mt-4 lg:w-2/6 lg:pt-12 xl:pt-0"
             >
               <img
+                class="rounded-lg"
                 src="public/img/6x10jc.jpg"
                 alt="Tliangso terrorized people"
               />
@@ -274,7 +274,11 @@
 
           <div class="lg:grid lg:grid-cols-2 lg:flex-row">
             <div class="lg:col-span-1">
-              <h3 class="resume-title">Summary</h3>
+              <h3
+                class="mb-2 pt-2 text-start text-3xl font-medium text-gray-800"
+              >
+                Summary
+              </h3>
               <div class="resume-item pb-0">
                 <h4>Pakorn Tantiwutthiphat</h4>
                 <p>
@@ -291,8 +295,8 @@
               </div>
 
               <h3 class="resume-title">Education</h3>
-              <div class="resume-item">
-                <h4 class="divide-x-4">
+              <div class="resume-item pb-0">
+                <h4>
                   Major in Science-Mathematics(Faculty of Robotics and AI)
                 </h4>
                 <h5>2020-present</h5>
