--- a/resume2.html
+++ b/resume2.html
@@ -319,10 +319,10 @@
                                     required></textarea>
                             </div>
                             <div class="rounded-md shadow">
-                                <a href="#"
-                                    class="mt-2 flex w-full items-center justify-center rounded-md border border-transparent bg-sky-700 px-8 py-3 text-base font-medium text-white hover:bg-sky-900 md:py-4 md:px-10 md:text-lg">Send
-                                    message</a>
-                            </div>
+                                <button type="submit"
+                                  class="mt-2 flex w-full items-center justify-center rounded-md border border-transparent bg-sky-700 px-8 py-3 text-base font-medium text-white hover:bg-sky-900 md:py-4 md:px-10 md:text-lg">Send
+                                  message
+                              </div>
                         </form>
                     </div>
                 </div>
