--- a/resume1.html
+++ b/resume1.html
@@ -129,8 +129,8 @@
         data-aos="flip-left"
         data-aos-delay="200"
       >
-        <h1 class="font-sans text-6xl font-bold text-sky-800">Resume 1</h1>
-        <p class="my-3 text-3xl font-semibold text-sky-700">
+        <h1 class="font-sans text-6xl font-bold text-sky-700">Resume 1</h1>
+        <p class="my-3 text-3xl font-semibold text-sky-600">
           Name:
           <span class="typed" data-typed-items="Pakorn Tantiwutthiphat"></span>
         </p>
@@ -147,25 +147,25 @@
             href="https://www.facebook.com/prite.pakorn"
             class="facebook m-2"
             target="_blank"
-            ><i class="bx bxl-facebook text-5xl text-sky-700"></i
+            ><i class="bx bxl-facebook text-5xl text-sky-600"></i
           ></a>
           <a
             href="https://www.instagram.com/prite_.to/"
             class="instagram m-2"
             target="_blank"
-            ><i class="bx bxl-instagram text-5xl text-sky-700"></i
+            ><i class="bx bxl-instagram text-5xl text-sky-600"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/pakorn-tantiwutthiphat-66a6b7246/"
             class="linkedin m-2"
             target="_blank"
-            ><i class="bx bxl-linkedin text-5xl text-sky-700"></i
+            ><i class="bx bxl-linkedin text-5xl text-sky-600"></i
           ></a>
           <a
             href="https://www.youtube.com/watch?v=OoQLoKHhohg"
             class="discord m-2"
             target="_blank"
-            ><i class="bx bxl-discord text-5xl text-sky-700"></i
+            ><i class="bx bxl-discord text-5xl text-sky-600"></i
           ></a>
         </div>
       </div>
@@ -275,7 +275,7 @@
           <div class="lg:grid lg:grid-cols-2 lg:flex-row">
             <div class="lg:col-span-1">
               <h3
-                class="mb-2 pt-2 text-start text-3xl font-medium text-gray-800"
+                class="mb-2 pt-2 text-start text-3xl font-semibold text-gray-800"
               >
                 Summary
               </h3>
@@ -294,7 +294,11 @@
                 </ul>
               </div>
 
-              <h3 class="resume-title">Education</h3>
+              <h3
+                class="mb-2 pt-2 text-start text-3xl font-semibold text-gray-800"
+              >
+                Education
+              </h3>
               <div class="resume-item pb-0">
                 <h4>
                   Major in Science-Mathematics(Faculty of Robotics and AI)
@@ -313,7 +317,11 @@
               </div>
             </div>
             <div class="lg:col-span-1">
-              <h3 class="resume-title">Professional Experience</h3>
+              <h3
+                class="mb-2 pt-2 text-start text-3xl font-semibold text-gray-800"
+              >
+                Professional Experience
+              </h3>
               <div class="resume-item lg:ml-2">
                 <h4>CSCamp 13</h4>
                 <h5>2021</h5>
@@ -490,10 +498,10 @@
           </div>
         </section>
       </section>
-      <!-- <section id="contact" class="contact">
+      <section id="contact" class="contact">
       <div class="container" data-aos="fade-down">
         <div>
-          <h2>Contact</h2>
+          <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-sky-900">Contact</h2>
         </div>
         <div
               class="relative mb-4 mt-4 flex items-center justify-center py-2"
@@ -509,7 +517,7 @@
           </div>
         <div class="mt-2 lg:grid lg:grid-cols-3 lg:flex-row">
           <div class="lg:col-span-1">
-            <div class="info">
+            <div class="info lg:mt-12">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
@@ -548,14 +556,14 @@
         </div>
       </div>
       </div>
-    </section> -->
+    </section>
     </main>
     <footer id="footer">
       <div class="container">
         <h3>Pakorn Tantiwutthiphat</h3>
         <p>
           "The problem with coding CSS isn't only the skill issue, but it is
-          also the destiny that will decide your future." - Sun Tzu the art of
+          also the destiny that will decide your result." - Sun Tzu the art of
           coding, 2022
         </p>
         <div class="social-links">
